tests/ui/notminir.min
this is not a minir file.
